2001-07-11  Joe Shaw  <joe@ximian.com>

	* Array.cs: Change all instances of trying to access an array with
	the index operator to calls to GetValue and SetValue, and add
	InternalGetValue and InternalSetValue which are internal calls into
	the runtime. Ew.

2001-07-10  Joe Shaw  <joe@ximian.com>

	* Array.cs: Implemented everything but Sort().

2001-07-09  Jeffrey Stedfast  <fejj@ximian.com>

	* Object.cs (Object::Equals): Object variable name is `o'.

2001-07-06  Joe Shaw  <joe@ximian.com>

	* Int16.cs, Int32.cs, Int64.cs, UInt16.cs, UInt32.cs, UInt64.cs:
	Implement the IComparable and IFormattable interfaces. Fix a
	typo (publig -> public)

	* ApplicationException.cs, ArgumentException.cs,
	ArgumentNullException.cs, ArgumentOutOfRangeException.cs,
	ArtithmeticException.cs, ArrayTypeMismatchException.cs,
	DivideByZeroException.cs, DuplicateWaitObjectException.cs,
	ExecutionEngineException.cs, FormatException.cs,
	IndexOutOfRangeException.cs, InvalidCastException.cs,
	InvalidOperationException.cs, InvalidProgramException.cs,
	MulticateNotSupportedException.cs, NotFiniteNumberException.cs,
	NotSupportedException.cs, NullReferenceException.cs,
	OutOfMemoryException.cs, OverflowException.cs, RankException.cs,
	StackOverflowException.cs, SystemException.cs,
	TypeInitializationException.cs: Added all of the exceptions
	specified by the language spec. Mmmm... bloat.

2001-07-06  Miguel de Icaza  <miguel@ximian.com>

	* Int64.cs, Int32.cs: Put.  Parsing and ToString missing.  Should
	do a generic routine all of these guys use.

	* Int16.cs: identified missing methods.

	* UInt16.cs, UInt32.cs, UInt64.cs: Add.

2001-06-26  Miguel de Icaza  <miguel@ximian.com>

	* TypeCode.cs: Implement

	* Void.cs: Implement.

	* TODO: Add file to keep track of pending tasks.

	* Object.cs, ValueType.cs: Implement.
